Fixed some display bug for blog headers on mobile devices

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -268,3 +268,7 @@ p {
     font-weight: 600;
     color: #767676;
 }
+
+a.post-link {
+    line-height: 130%;
+}
